Actions
Bug #9560
closedIPv4 packets in IPv6 ethernet frames panic debug builds
Start date:
2018-05-29
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
Debug builds (of SmartOS) keep dumping with the same stack.
vpanic() 0xfffffffffbe13588() mac_ip_hdr_length_v6+0x6f(fffffeb3270c1684, fffffeb3270c16b8, fffffe00f8ef81ec, fffffe00f8ef81ef, 0) mac_rx_srs_long_fanout+0x1e3(fffffeb6fb6fb340, fffffeb37029d280, 86dd, 12, fffffe00f8ef8ab8, fffffe00f8ef8abc) NOTICE THE 0x86dd ABOVE? THAT'S ETHERTYPE_IP6. mac_rx_srs_fanout+0x2a2(fffffeb6fb6fb340, fffffeb45e81b980) mac_rx_srs_drain+0x2f2(fffffeb6fb6fb340, 1000) mac_rx_srs_poll_ring+0x2fa(fffffeb6fb6fb340) thread_start+8()
I am directly assigning this to Dan as he already has a patch for this.
Updated by Jorge Schrauwen almost 4 years ago
More context from the back and forth e-mails with Dan.
::status
debugging crash dump vmcore.1 (64-bit) from carbon operating system: 5.11 joyent_20180519T150206Z (i86pc) image uuid: (not set) panic message: assertion failed: IPH_HDR_VERSION(ip6h) == IPV6_VERSION, file: ../../common/io/mac/mac_util.c, line: 539 dump content: kernel pages only
$c
vpanic() 0xfffffffffbe13588() mac_ip_hdr_length_v6+0x6f(fffffeb3270c1684, fffffeb3270c16b8, fffffe00f8ef81ec, fffffe00f8ef81ef, 0) mac_rx_srs_long_fanout+0x1e3(fffffeb6fb6fb340, fffffeb37029d280, 86dd, 12, fffffe00f8ef8ab8, fffffe00f8ef8abc) NOTICE THE 0x86dd ABOVE? THAT'S ETHERTYPE_IP6. mac_rx_srs_fanout+0x2a2(fffffeb6fb6fb340, fffffeb45e81b980) mac_rx_srs_drain+0x2f2(fffffeb6fb6fb340, 1000) mac_rx_srs_poll_ring+0x2fa(fffffeb6fb6fb340) thread_start+8()
fffffeb37029d280::mblk
ADDR FL TYPE LEN BLEN RPTR DBLK fffffeb37029d280 0 data 70 80 fffffeb3270c1672 fffffeb3270c1600
fffffeb3270c1672::print -a "struct ether_vlan_header"
fffffeb3270c1672 { fffffeb3270c1672 ether_dhost = { fffffeb3270c1672 ether_addr_octet = [ 0xd2, 0x89, 0x66, 0xb4, 0xd1, 0xdb ] } fffffeb3270c1678 ether_shost = { fffffeb3270c1678 ether_addr_octet = [ 0x78, 0x4f, 0x43, 0x25, 0xb, 0x91 ] } fffffeb3270c167e ether_tpid = 0x81 fffffeb3270c1680 ether_tci = 0xa00 fffffeb3270c1682 ether_type = 0xdd86 }
fffffeb3270c1684::print -a ipha_t
fffffeb3270c1684 { fffffeb3270c1684 ipha_version_and_hdr_length = 0x45 fffffeb3270c1685 ipha_type_of_service = 0 fffffeb3270c1686 ipha_length = 0x3400 fffffeb3270c1688 ipha_ident = 0 fffffeb3270c168a ipha_fragment_offset_and_flags = 0x40 fffffeb3270c168c ipha_ttl = 0x40 fffffeb3270c168d ipha_protocol = 0x6 fffffeb3270c168e ipha_hdr_checksum = 0xbec5 fffffeb3270c1690 ipha_src = 10.23.10.151 fffffeb3270c1694 ipha_dst = 66.117.29.227 }
Updated by Dan McDonald almost 4 years ago
- Subject changed from Kernel dumps on debug builds to IPv4 packets in IPv6 ethernet frames panic debug builds
Updated by Electric Monk almost 4 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit e5d18d1ceadd308280e89216cc186d7aa8058459
commit e5d18d1ceadd308280e89216cc186d7aa8058459 Author: Dan McDonald <danmcd@joyent.com> Date: 2018-05-30T02:00:00.000Z 9560 IPv4 packets in IPv6 ethernet frames panic debug builds Reviewed by: Jorge Schrauwen <jorge@blackdot.be> Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Ken Mays <maybird1776@yahoo.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>
Updated by Jorge Schrauwen over 3 years ago
I hit this again on a SmartOS build from 20180830!
2018-09-11T20:37:36.285458+00:00 carbon savecore: [ID 570001 auth.error] reboot after panic: assertion failed: IPH_HDR_VERSION(ip6h) == IPV6_VERSION, file: ../../common/io/mac/mac_util.c, line: 539 2018-09-11T20:37:35+00:00 carbon savecore: [ID 315959 auth.warning] incomplete dump on dump device 2018-09-11T20:37:35+00:00 carbon savecore: [ID 121630 auth.warning] System dump time: Tue Sep 11 20:21:44 2018 2018-09-11T20:37:35+00:00 carbon savecore: [ID 676882 auth.error] Saving compressed system crash dump in /var/crash/volatile/vmdump.8
Sadly the dump is incomplete and the box hit the same issue again when it was trying to save vmdump.8 so it did not even save the incomplete dump either.
Actions