9560 IPv4 packets in IPv6 ethernet frames panic debug builds Reviewed by: Jorge Schrauwen <jorge@blackdot.be> Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Ken Mays <maybird1776@yahoo.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>